bugfix: Initial value of line height is empty when there is no annotation

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -17,6 +17,11 @@
 }
 
 .textae-editor {
+  // Specify the initial value of the line height.
+  // Set the initial value of line-height to the style of textae-editor so that it can be easily overridden with inline style as follows.
+  // <div class = "textae-editor" style = "line-height: 48px;"> </ div>
+  line-height: 41px;
+
   position: relative;
   padding: 2px 0;
 
