bugfix: Automatic selection to the taxtae editor fails depending on the load time to html
Change the event to bind to ensure focus on textae.

--- a/src/app/editor.html
+++ b/src/app/editor.html
@@ -30,9 +30,7 @@
   }()
 
   // Run scripts after start the textae.
-  setTimeout(function() {
-    document.querySelector('.textae-editor').focus()
-  }, 500)
+  window.addEventListener('load', () => document.querySelector('.textae-editor').focus())
   </script>
 </body>
 
