ADDED the page 'Term Edit Mode'

--- a/_includes/_header.html
+++ b/_includes/_header.html
@@ -2,7 +2,7 @@
 
 <ul class="main-nav">
 	<li><a href="{{site.baseurl}}/">Docs</a></li>
-	<li><a title="A full-featured editor implemented using TextAE" href="http://textae.pubannotation.org/editor.html">Editor</a></li>
+	<li><a title="A full-featured editor implemented using TextAE" href="http://textae.pubannotation.org/editor.html?mode=edit">Editor</a></li>
 	<li><a title="A repository of TextAE configurations" href="http://textae-configs.pubannotation.org">Configs</a></li>
 	<li><a href="https://github.com/pubannotation/textae">GitHub</a></li>
 </ul>
