--- a/css/docs.scss
+++ b/css/docs.scss
@@ -20,7 +20,14 @@ article {
   h2, h3 {
     margin: 0.8em 0 0.5em 0;
     border-style: none;
+  }
+
+  h2 {
     font-size: 1.2em;
+  }
+
+  h3 {
+    font-size: 1.0em;
   }
 
 	ul {
