feature: Cut and paste

--- a/src/lib/css/textae-control.less
+++ b/src/lib/css/textae-control.less
@@ -112,6 +112,10 @@
     background: url("./images/btn_copy_16.png");
   }
 
+  &__cut-button {
+    background: url("./images/btn_cut_16.png");
+  }
+
   &__paste-button {
     background: url("./images/btn_paste_16.png");
   }
