--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -74,8 +74,7 @@
       position: relative;
 
       /* prefer calculated line height */
-      p {
-        line-height: inherit;
+      &__paragraph-margin {
         padding: 0 16px;
       }
     }
