--- a/src/lib/css/textae-control.less
+++ b/src/lib/css/textae-control.less
@@ -72,6 +72,10 @@
     }
   }
 
+  &__write-auto-button {
+    background: url("./images/btn_write_auto_16.png");
+  }
+
   &__undo-button {
     background: url("./images/btn_undo_16.png");
   }
