feature: Line height auto

--- a/src/lib/css/textae-control.less
+++ b/src/lib/css/textae-control.less
@@ -135,6 +135,10 @@
   &__line-height-button {
     background: url("./images/btn_line_height_16.png");
   }
+
+  &__line-height-auto-button {
+    background: url("./images/btn_line_height_auto_16.png");
+  }
 }
 
 [mode="edit"].textae-editor--active {
