feature: type-sets

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -421,6 +421,23 @@
     width: 100%;
     z-index: 200;
   }
+
+  &__style{
+    &--italic{
+      font-style: italic;
+    }
+    &--bold{
+      font-weight: bold;
+    }
+    &--subscript{
+      font-size: smaller;
+      vertical-align: sub;
+    }
+    &--superscript{
+      font-size: smaller;
+      vertical-align: super;
+    }
+  }
 }
 
 /* relation */
