bugfix: The relation you selected will not be thicker
Changed relationship thickness from an inline attribute to a stylesheet.

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -355,6 +355,7 @@
 
       &__relation:hover,
       &__relation.hover {
+        stroke-width: 3;
         z-index: 5;
       }
 
@@ -385,6 +386,7 @@
     .textae-editor__relation:hover,
     .textae-editor__relation.hover {
       z-index: 1;
+      stroke-width: 3;
     }
 
     .textae-editor__relation__label:hover,
@@ -394,6 +396,7 @@
 
     .textae-editor__relation.ui-selected {
       z-index: 1;
+      stroke-width: 3;
     }
 
     .textae-editor__relation__label.ui-selected {
