refactor: The tab hover represents an increasing z-index of the entire type, not the entity pane

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -180,7 +180,8 @@
     }
 
     &:hover {
-      .textae-editor__entity-pane,
+      z-index: 2;
+
       .textae-editor__type-values {
         z-index: 2;
       }
