refactor: Change the element that increases the z-index when an entity is selected from the entity pane to a type

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -241,7 +241,7 @@
           opacity: 0.5;
         }
       }
-      &__entity-pane.ui-selected {
+      &__type.ui-selected {
         z-index: 2;
       }
       &__type-values {
