refactor: Split the stylesheet for the entities

--- a/src/lib/css/textae.less
+++ b/src/lib/css/textae.less
@@ -5,6 +5,7 @@
 @import "modules/font-awesome.less";
 @import "modules/jquery-ui.min.less";
 @import "textae-editor.less";
+@import "textae-editor-entity.less";
 @import (less) "../../../node_modules/alertifyjs/build/css/alertify.css";
 @import (less) "../../../node_modules/alertifyjs/build/css/themes/default.css";
 @import (less) "../../../node_modules/jsondiffpatch/public/formatters-styles/html.css";
