--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -114,7 +114,7 @@
     border-color: @border;
     border-style: solid;
     border-width: 1px 0;
-    white-space: nowrap;
+    white-space: pre;
 
     &:hover {
       text-shadow: 1px 1px 1px #00d;
