feature: Folding over the contents of the validation dialog

--- a/src/lib/css/textae-editor-dialog.less
+++ b/src/lib/css/textae-editor-dialog.less
@@ -288,6 +288,7 @@
       td {
         .cell;
         background-color: #fff;
+        line-break: anywhere;
 
         &.alert {
           color: red;
