feature: Expand configuration diff area

--- a/src/lib/css/textae-editor-dialog.less
+++ b/src/lib/css/textae-editor-dialog.less
@@ -101,10 +101,9 @@
     }
 
     &__diff-viewer {
-      overflow: scroll;
+      overflow-x: scroll;
       margin: 0 10px;
       padding: 10px 0;
-      max-height: 250px;
       border: solid 1px lightgray;
       border-radius: 4px;
     }
