feature: Added a source property column to show which properties of the annotation file are in the table where a reference item is not found in the Validation dialog

--- a/src/lib/css/textae-editor-dialog.less
+++ b/src/lib/css/textae-editor-dialog.less
@@ -272,6 +272,10 @@
         background-color: #ddd;
         color: #333;
 
+        &.sourceProperty {
+          width: 105px;
+        }
+
         &.id {
           width: 32px;
         }
