blocks: Render background of block span

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -100,6 +100,13 @@
     }
   }
 
+  &__block {
+    &-bg {
+      position: absolute;
+      background-color: fade(@baseColor, 25%);
+    }
+  }
+
   &--editable {
     .textae-editor {
       &__span.ui-selected {
