blocks: Render entities of block span

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -43,8 +43,9 @@
     &__text-box {
       overflow: hidden;
       position: relative;
-      padding: 0 16px;
+      padding-left: 16px;
       white-space: pre-wrap;
+      width: calc(100% - 100px);
     }
   }
 
