blocks; Extension for Blocks in the EditMode.StateMachine

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -32,6 +32,10 @@
     .active;
   }
 
+  &--block-mode.textae-editor--active {
+    background-color: #eef;
+  }
+
   &--relation-mode.textae-editor--active {
     background-color: #ffedee;
   }
