blocks: Add block button to the control bar

--- a/src/lib/css/textae-control.less
+++ b/src/lib/css/textae-control.less
@@ -52,6 +52,10 @@
     background: url("./images/btn_term_16.png");
   }
 
+  &__block-button {
+    background: url("./images/btn_block_16.png");
+  }
+
   &__relation-button {
     background: url("./images/btn_relation_16.png");
   }
