blocks: Extension for Blocks in Type Editor

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -176,6 +176,12 @@
     }
   }
 
+  &--block-mode {
+    .textae-editor__block-bg {
+      z-index: 1;
+    }
+  }
+
   /* relation edit mode */
   &--relation-mode {
     cursor: pointer;
