blocks: Highlight the selected block

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -105,6 +105,11 @@
     &-bg {
       position: absolute;
       background-color: fade(@baseColor, 25%);
+      &.ui-selected {
+        background-color: rgba(255, 200, 100, 0.9);
+        border-color: @selected;
+        color: #00d;
+      }
     }
   }
 
