--- a/src/lib/css/textae-editor-entity.less
+++ b/src/lib/css/textae-editor-entity.less
@@ -89,6 +89,19 @@
         .label--full-length;
       }
     }
+
+    &.ui-selected {
+      z-index: 2;
+
+      .textae-editor__entity__endpoint {
+        background-color: fade(@selected, 80%);
+      }
+
+      .textae-editor__entity__type-values {
+        .type-values--selected;
+        z-index: 2;
+      }
+    }
   }
 
   &__entity__attribute {
@@ -111,29 +124,17 @@
 
   &--editable {
     .textae-editor {
-      &__entity__endpoint {
-        &.ui-selected {
-          background-color: fade(@selected, 80%);
-        }
 
+      &__entity__endpoint {
         &.ui-to-be-cut {
           opacity: 0.5;
         }
-      }
-
-      &__entity.ui-selected {
-        z-index: 2;
       }
 
       &__entity__type-values {
         box-shadow: none;
         opacity: 0.9;
         overflow: hidden;
-
-        &.ui-selected {
-          .type-values--selected;
-          z-index: 2;
-        }
 
         &.ui-to-be-cut {
           opacity: 0.5;
