feature: Show borders on blocks

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -109,6 +109,8 @@
     &-bg {
       position: absolute;
       background-color: fade(@baseColor, 25%);
+      border-style: solid;
+      border-width: 1px;
       &.ui-selected {
         background-color: rgba(255, 200, 100, 0.9);
         border-color: @selected;
