--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -106,8 +106,11 @@
   }
 
   &__block {
-    &-bg {
+    &-bg,
+    &-hit-area {
       position: absolute;
+    }
+    &-bg {
       background-color: fade(@baseColor, 25%);
       border-style: solid;
       border-width: 1px;
@@ -116,6 +119,10 @@
         border-color: @selected;
         color: #00d;
       }
+    }
+    &-hit-area {
+      display: none;
+      z-index: 1;
     }
   }
 
@@ -183,8 +190,8 @@
   }
 
   &--block-mode {
-    .textae-editor__block-bg {
-      z-index: 1;
+    .textae-editor__block-hit-area {
+      display: block;
     }
   }
 
