--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -48,8 +48,8 @@
       overflow: hidden;
       position: relative;
       padding-left: 16px;
+      padding-right: 100px;
       white-space: pre-wrap;
-      width: calc(100% - 100px);
     }
   }
 
