refactor: Add a css class for the block simple mode

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -31,7 +31,8 @@
         .active;
       }
     
-      &--block-with-relation {
+      &--block-with-relation,
+      &--block-without-relation {
         background-color: #eef;
       }
     
@@ -190,7 +191,8 @@
     }
   }
 
-  &__mode--block-with-relation {
+  &__mode--block-with-relation,
+  &__mode--block-without-relation {
     .textae-editor__block-hit-area {
       display: block;
     }
