--- a/src/lib/css/textae-editor-entity.less
+++ b/src/lib/css/textae-editor-entity.less
@@ -153,6 +153,7 @@
   }
 
   /* denotation without relation mode */
+  &__mode--view-without-relation,
   &__mode--denotation-without-relation {
     .textae-editor {
       &__grid {
