refactor: Deflate the unwanted nest of styles

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -131,12 +131,10 @@
   }
 
   &--editable {
-    .textae-editor {
-      &__span.ui-selected {
-        background-color: rgba(255, 200, 100, 0.9);
-        border-color: @selected;
-        color: #00d;
-      }
+    .textae-editor__span.ui-selected {
+      background-color: rgba(255, 200, 100, 0.9);
+      border-color: @selected;
+      color: #00d;
     }
   }
 
