feature: In block simple mode do not show relations

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -153,9 +153,10 @@
     }
   }
 
-  /* denotation without relation mode */
+  /* without relation mode */
   &__mode--view-without-relation,
-  &__mode--denotation-without-relation {
+  &__mode--denotation-without-relation,
+  &__mode--block-without-relation {
     .textae-editor {
 
       &__relation,
