refactor: Stop using textae-editor-editable to judge the view mode

--- a/src/lib/css/textae-editor-entity.less
+++ b/src/lib/css/textae-editor-entity.less
@@ -122,7 +122,11 @@
     opacity: 0.9;
   }
 
-  &--editable {
+  &__mode--denotation-with-relation,
+  &__mode--denotation-without-relation,
+  &__mode--block-with-relation,
+  &__mode--block-without-relation,
+  &__mode--relation {
     .textae-editor {
 
       &__entity__type-values {
