feature: Put the block entity at the bottom of the grid

--- a/src/lib/css/textae-editor-entity.less
+++ b/src/lib/css/textae-editor-entity.less
@@ -25,6 +25,11 @@
     overflow: visible;
     padding: 0;
     position: absolute;
+
+    &.textae-editor__block-hit-area {
+      display: flex;
+      flex-direction: column-reverse;
+    }
   }
 
   &__entity {
