--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -191,6 +191,17 @@
     }
   }
 
+  &__mode--block-with-relation,
+  &__mode--block-without-relation {
+    .textae-editor__block-hit-area {
+      background-color: fade(@baseColor, 25%);
+      &.ui-selected {
+        background-color: rgba(255, 200, 100, 0.9);
+        border-color: @selected;
+      }
+    }
+  }
+
   /* relation edit mode */
   &__mode--relation {
     cursor: pointer;
