feature: Change style of the background of the blocks

--- a/src/lib/css/textae-editor.less
+++ b/src/lib/css/textae-editor.less
@@ -120,9 +120,8 @@
     width: 100%;
 
     &-bg {
-      background-color: fade(@baseColor, 25%);
-      border-style: solid;
-      border-width: 1px;
+      border-style: dotted;
+      border-width: 1px 0;
       position: absolute;
       &.ui-selected {
         background-color: rgba(255, 200, 100, 0.9);
