--- a/src/lib/css/textae-editor-entity.less
+++ b/src/lib/css/textae-editor-entity.less
@@ -27,8 +27,11 @@
     position: absolute;
 
     &.textae-editor__block-hit-area {
+      border-radius: 0 15px 15px 0;
+      border-width: 1px 0 1px 0;
       display: flex;
       flex-direction: column-reverse;
+      padding-bottom: 15px;
     }
   }
 
