--- a/src/lib/css/textae-editor-type-pallet.less
+++ b/src/lib/css/textae-editor-type-pallet.less
@@ -52,6 +52,7 @@
     font-size: 1.4em;
     margin-bottom: -3px;
     margin-right: 10px;
+    min-width: 144px;
 
     &__selected-entity-label {
       font-size: small;
